--- a/package.json
+++ b/package.json
@@ -4,23 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --ci --reporters=jest-junit --reporters=default"
   },
-  "jestJsonReporter": {
-    "outputFile": "./test_result/result.json"
-  },
-  "jest": {
-    "testResultsProcessor": "./node_modules/jest-json-reporter"
-  },
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jest": "^27.5.1"
   },
-  
-  
   "devDependencies": {
-    "jest-json-reporter": "^1.2.2"
+    "jest-json-reporter": "^1.2.2",
+    "jest-junit": "^13.2.0"
   }
-
 }
