--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
     - run: npm test
     
     - name: Analyze Test and/or Coverage Results
+      if: always()
       uses: thundra-io/foresight-test-kit-action@v1
       with:
         api_key: ${{ secrets.foresight_api_key }}
